# speckit_plus

./: .gitignore  pyproject.toml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
history/prompts/constitution/: 001-improve-constitution.refactor.prompt.md  002-enhance-constitution-oop-clean-code.refactor.prompt.md  003-enhance-constitution-world-class-calculator.refactor.prompt.md
history/prompts/general/: 001-git-workflow-commit-and-push.refactor.prompt.md  002-git-pull-master-branch.chore.prompt.md  003-fix-calculator-logic-and-complete-project.refactor.prompt.md
specs/001-simple-calculator-spec/: data-model.md  plan.md  research.md  spec.md  tasks.md
src/calculator/: logic.py  main.py  ui.py
tests/: test_logic.py
